--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <link rel="stylesheet" href="css/L.Control.Layers.Tree.css">
         <link rel="stylesheet" href="css/qgis2web.css">
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <link rel="stylesheet" href="css/leaflet-control-geocoder.Geocoder.css">
         <style>
         html, body, #map {
             width: 100%;
@@ -18,31 +17,12 @@
             padding: 0;
             margin: 0;
         }
- /* Styles for the floating image */
-        .floating-image {
-            position: absolute; /* Or fixed if you want it to stay in place during scroll */
-            top: 175px; /* Adjust as needed */
-            left: 20px; /* Adjust as needed */
-            z-index: 1000; /* Ensure it's above other map elements */
-            /* Add any other styling you want (e.g., width, height, border, etc.) */
-            width: 100px; /* Example width */
-            height: auto; /* Maintain aspect ratio */
-        }
-        .floating-image img {
-          max-width: 100%;
-          height: auto;
-        }
         </style>
-        <title>Find Narcan® in Chautauqua County</title>
+        <title>Click on the Narcan® symbols for more information</title>
     </head>
     <body>
         <div id="map">
         </div>
-<div class="floating-image">
-    <a href="https://combataddictionchq.com">
-        <img src="markers/CombatAddictionCHQ-logo.png" alt="CombatAddictionCHQ">
-    </a>
-</div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
         <script src="js/L.Control.Layers.Tree.min.js"></script>
@@ -53,11 +33,11 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
         <script src="data/ChautauquaCountyoutline_1.js"></script>
         <script src="data/Lakeoverlay_2.js"></script>
         <script src="data/LakeErie_3.js"></script>
         <script src="data/Naloxboxlocations_4.js"></script>
+        <script src="data/LakeErie_5.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -77,7 +57,7 @@
         }
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[41.5221696665366,-81.29152624789401],[43.319324136460935,-77.7008107123525]]);
+        }).fitBounds([[42.43866574716522,-79.3457462020732],[42.452701967538815,-79.32059490932444]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -115,8 +95,8 @@
             this.update();
             return this._div;
         };
-        title.update = function () { 
-this._div.innerHTML = '<h2>Click on the Narcan® symbols &nbsp<img src="markers/favicon-32x32.png" alt="Narcan symbol"> &nbspfor more information</h2>';
+        title.update = function () {
+            this._div.innerHTML = '<h2>Click on the Narcan® symbols for more information</h2>';
         };
         title.addTo(map);
         var abstract = new L.Control({'position':'topleft'});
@@ -134,11 +114,9 @@ this._div.innerHTML = '<h2>Click on the Narcan® symbols &nbsp<img src="markers/
                 this._div.innerHTML = 'Narcan® can also be <a href=\'https://forms.ny.gov/s3/Harm-Reduction-Order-Form\'>delivered by mail </a> or even <a href= \'https://www.mhachautauqua.org/naloxone\'>delivered to you by MHA.</a>  All Narcan® listed here is free of charge.';
         };
         abstract.addTo(map);
-/*
-var zoomControl = L.control.zoom({
-    position: 'topleft'
-}).addTo(map);
-*/
+        var zoomControl = L.control.zoom({
+            position: 'topleft'
+        }).addTo(map);
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
@@ -418,13 +396,13 @@ var zoomControl = L.control.zoom({
             });
             var popupContent = '<table>\
                     <tr>\
-                        <td colspan="2"><u>' + (feature.properties['Facility name'] !== null ? autolinker.link(String(feature.properties['Facility name']).replace(/'/g, '\'').toLocaleString()) : '') + '</u></td>\
+                        <td colspan="2">' + (feature.properties['Facility name'] !== null ? autolinker.link(String(feature.properties['Facility name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Address'] !== null ? autolinker.link(String(feature.properties['Address']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                     </tr>\
+                    </tr>\
                     <tr>\
-                        <td colspan="2"><b>' + (feature.properties['Location'] !== null ? autolinker.link(String(feature.properties['Location']).replace(/'/g, '\'').toLocaleString()) : '') + '</b></td>\
+                        <td colspan="2">' + (feature.properties['Location'] !== null ? autolinker.link(String(feature.properties['Location']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Availability'] !== null ? autolinker.link(String(feature.properties['Availability']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
@@ -471,8 +449,85 @@ var zoomControl = L.control.zoom({
                 return L.marker(latlng, style_Naloxboxlocations_4_0(feature));
             },
         });
-  bounds_group.addLayer(layer_Naloxboxlocations_4);
+        bounds_group.addLayer(layer_Naloxboxlocations_4);
         map.addLayer(layer_Naloxboxlocations_4);
+        function pop_LakeErie_5(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (var i in e.target._eventParents) {
+                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
+                            e.target._eventParents[i].resetStyle(e.target);
+                        }
+                    }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['HYDRO_P_'] !== null ? autolinker.link(String(feature.properties['HYDRO_P_']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['UIDENT'] !== null ? autolinker.link(String(feature.properties['UIDENT']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['TYPE'] !== null ? autolinker.link(String(feature.properties['TYPE']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['COUNTRY'] !== null ? autolinker.link(String(feature.properties['COUNTRY']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NAMEEN'] !== null ? autolinker.link(String(feature.properties['NAMEEN']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NAMESP'] !== null ? autolinker.link(String(feature.properties['NAMESP']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NAMEFR'] !== null ? autolinker.link(String(feature.properties['NAMEFR']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        function style_LakeErie_5_0() {
+            return {
+                pane: 'pane_LakeErie_5',
+                opacity: 1,
+                color: 'rgba(35,35,35,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(145,82,45,1.0)',
+                interactive: false,
+            }
+        }
+        map.createPane('pane_LakeErie_5');
+        map.getPane('pane_LakeErie_5').style.zIndex = 405;
+        map.getPane('pane_LakeErie_5').style['mix-blend-mode'] = 'normal';
+        var layer_LakeErie_5 = new L.geoJson(json_LakeErie_5, {
+            attribution: '',
+            interactive: false,
+            dataVar: 'json_LakeErie_5',
+            layerName: 'layer_LakeErie_5',
+            pane: 'pane_LakeErie_5',
+            onEachFeature: pop_LakeErie_5,
+            style: style_LakeErie_5_0,
+        });
+        bounds_group.addLayer(layer_LakeErie_5);
+        map.addLayer(layer_LakeErie_5);
         setBounds();
         </script>
     </body>
